--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ReadNFCTag</string>
     <string name="nfc_error">NFC is disabled</string>
+    <string name="copy">Copy</string>
 </resources>
